@startuml DonaTrack_ServicioNotificaciones_DiagramaClases
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "Servicio de Notificaciones" {

    class NotificadorService {
        - adaptadores: Map<String, NotificacionAdapter>
        + NotificadorService(adaptadores: Map<String, NotificacionAdapter>)
        + enviarNotificacion(destinatario: String, mensaje: String, medio: String)
    }

    enum TipoEvento {
        INACTIVIDAD_DONANTE
        DONACION_ASIGNADA_ENTIDAD
        DONACION_ASIGNADA_DONANTE
        MISION_CUMPLIDA
        CAMBIO_CATEGORIA
        ' --- Agregados de la Entrega 3 ---
        INICIO_RUTA_LOGISTICA
        ENTREGA_EXITOSA
        ENTREGA_NO_SATISFACTORIA
    }

    class Evento {
        - tipoEvento: TipoEvento
        - descripcion: String
        - rolesDestinatarios: List<String>
        + validoParaNotificar(rol: String): boolean
    }

    class NotificacionFactory {
        + {static} crearNotificacion(evento: Evento, destinatario: String, mensaje: String): Notificacion
        + {static} crearNotificacion(evento: Evento, destinatario: String, mensaje: String, medio: String): Notificacion
    }

    class Notificacion {
        - destinatario: String
        - mensaje: String
        - fechaEnvio: LocalDateTime
        - completada: boolean
        - evento: Evento
        - medio: String
        + Notificacion(destinatario: String, mensaje: String)
        + Notificacion(destinatario: String, mensaje: String, evento: Evento, medio: String)
        + marcarComoCompletada()
    }

    interface NotificacionAdapter {
        + enviar(notificacion: Notificacion)
    }

    class AdaptadorEmail implements NotificacionAdapter {
        + enviar(notificacion: Notificacion)
    }

    class AdaptadorSMS implements NotificacionAdapter {
        + enviar(notificacion: Notificacion)
    }

    class AdaptadorWhatsApp implements NotificacionAdapter {
        + enviar(notificacion: Notificacion)
    }

    class AdaptadorDiscord implements NotificacionAdapter {
        + enviar(notificacion: Notificacion)
    }

    ' Relaciones
    NotificadorService --> NotificacionAdapter : utiliza >
    NotificadorService ..> Notificacion : envía >

    NotificacionFactory ..> Notificacion : crea >

    Notificacion --> Evento : posee >
    Evento --> TipoEvento : posee >
}
@enduml